--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Toss time</title>
     <link rel="stylesheet" href="style.css" />
+    <link
+      rel="icon"
+      type="image/x-icon"
+      href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQHdF2uoryQhB-p1f1dxgHzH7i7PIl7amkQxg&usqp=CAU"
+    />
   </head>
   <body>
     <div id="wrapper">
