--- a/index.html
+++ b/index.html
@@ -6,17 +6,17 @@
     <title>Toss time</title>
     <link rel="stylesheet" href="style.css" />
     <link
-      rel="icon"
+      rel="shortcut icon"
+      href="https://cdn-icons-png.flaticon.com/128/5524/5524558.png"
       type="image/x-icon"
-      href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQHdF2uoryQhB-p1f1dxgHzH7i7PIl7amkQxg&usqp=CAU"
     />
   </head>
   <body>
     <div id="wrapper">
       <div class="container">
         <div class="stats">
-          <div id="heads-count">Heads: 0</div>
-          <div id="tails-count">Tails: 0</div>
+          <div id="heads-count"><span class="category">Heads:</span> 0</div>
+          <div id="tails-count"><span class="category">Tails:</span> 0</div>
         </div>
         <div class="coin">
           <div class="heads">
